<resources>
    <string name="app_name">Fisher King</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="back">Go back</string>

    <!-- LOGIN / REGISTER PAGE TEXT -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="login_fingerprint">Login using fingerprint</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account yet? Click here!</string>
    <string name="back_to_login">← Back to login</string>
    <string name="wrong_credentials">Incorrect username or password</string>
    <string name="empty_field">All fields required for registration</string>
    <string name="password_requirements">
        Password requirements\n
        \t\u2022 12-20 characters\n
        \t\u2022 a lower case character\n
        \t\u2022 an upper case character\n
        \t\u2022 a number\n
        \t\u2022 a special character\n
    </string>
    <!-- LOGIN / REGISTER PAGE TEXT - END -->

    <!-- NAVIGATION MENU -->
    <string name="header_text">Who dis?</string>
    <string name="home">Home</string>
    <string name="menu_item_1">Menu item</string>
    <string name="menu_catches">Catches</string>
    <string name="pages">Pages</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="start_from_home_page">Always start from Home page</string>
    <string name="logout">Logout</string>
    <!-- NAVIGATION MENU - END -->

    <!-- USERNAME POPUP - START -->
    <string name="add_username">Add a username for fingerprint login</string>
    <string name="add">Add</string>
    <!-- USERNAME POPUP - END -->

    <!-- NEW FISH POPUP -->
    <string name="fish_name">Title</string>
    <string name="fish_weight">Weight</string>
    <string name="grams_kg">Grams / KG</string>
    <string name="kg">Kg</string>
    <string name="grams">Grams</string>
    <string name="fish_length">Length</string>
    <string name="retake_picture">Retake picture</string>
    <string name="image_of_fish">Image of fish</string>
    <string name="verification_code">Verification code</string>
    <string name="picture_of_a_fish">Picture of a fish</string>
    <string name="caught_fish">History</string>
    <string name="navigationmaps">Maps</string>
    <string name="c">C</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind speed</string>
    <string name="_0">0</string>
    <string name="feels_like_0_c">Feels like 0°C</string>
    <string name="morning_0_c">Morning 0°C</string>
    <string name="evening_0_c">Evening 0°C</string>
    <string name="night_0_c">Night 0°C</string>
    <string name="_0_m_s" translatable="false">0 m/s</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="no_data">No Data</string>
    <string name="goback">GoBack</string>
    <string name="gonext">GoNext</string>
    <string name="enable_allow_location">Enable / allow location</string>
    <string name="weathericon" translatable="false">WeatherIcon</string>
    <string name="sunrise">Sunrise</string>
    <string name="go_to_latest_catches">Go to latest catches</string>
    <string name="login_with_biometrics">Login with biometrics</string>
    <string name="no_caught_fish">No caught fish</string>
    <string name="you_have_no_rank">You have no rank</string>
    <string name="no_favourite_place">No favourite place</string>
    <string name="wipe_user_data">Wipe user data</string>
    <string name="show_on_map">Open map</string>
    <string name="open_picture">Open picture</string>
    <string name="go_back">Go back</string>
    <!-- NEW FISH POPUP - END -->

</resources>