<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/pages">
        <menu>
            <item
                android:id="@+id/navigationHome"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/home" />
            <item
                android:id="@+id/navigationSettings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_item_1" />
            <item
                android:id="@+id/navigationCatches"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_catches" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/navigationNightModeSwitch"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/night_mode"
                app:actionLayout="@layout/switch_item"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/navigationHomeStart"
                android:title="@string/start_from_home_page"
                app:actionLayout="@layout/switch_item"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/navigationLogout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>